--- a/servent/pom.xml
+++ b/servent/pom.xml
@@ -37,6 +37,11 @@
             <version>4.0.0</version> <!-- Ensure you use a stable version -->
         </dependency>
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.17.0</version>
