--- a/servent/pom.xml
+++ b/servent/pom.xml
@@ -108,7 +108,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.cxxii.server.Server</mainClass>
+                                    <mainClass>org.cxxii.Main</mainClass>
                                 </transformer>
                             </transformers>
                             <outputFile>${project.build.directory}/servent-1.0-SNAPSHOT-shaded.jar</outputFile>
